@@ -17,7 +17,9 @@
 #include <stdlib.h>
 #endif
 #ifdef BOOTSTRAP
+#ifdef HAVE_MALLOC_H
 #include <malloc.h>
+#endif
 #endif
 
 /* Allow for C++ users */
